# data-cleaning-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  environment.py.py  graders.py  tasks.py
server/: app.py
